--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
         <main>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing<br>
-                elit. Donec a rhoncus leo. Donec at scelerisque<br>
-                magna. Nullam vitae neque sit amet erat dignissim<br>
-                cursus ac ac lectus. Aliquam erat volutpat. Praesent<br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Donec a rhoncus leo. Donec at scelerisque
+                magna. Nullam vitae neque sit amet erat dignissim
+                cursus ac ac lectus. Aliquam erat volutpat. Praesent
                 at quam aliquet 
             </p>
 
-            <div class="cards">
+            
                 <div class="card">
                     <img src="images/sorvete1.png" alt="">
                     <h2>Paletas</h2>
@@ -48,7 +48,7 @@
                     <img src="images/sorvete4.png" alt="">
                     <h2>Picolés</h2>
                 </div>
-            </div>
+            
         </main>
     </div>
 </body>
